workloads/mixed-scenario/customized-workloads/perfnode-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-traffic-httpsvr
  labels:
    app: node-traffic-httpsvr
spec:
  selector:
    matchLabels:
      app: node-traffic-httpsvr
      app.kubernetes.io/name: httpserver
  template:
    metadata:
      annotations:
        openshift.io/scc: privileged    
      labels:
        app: node-traffic-httpsvr
        app.kubernetes.io/name: httpserver   
    spec:
      containers:
      - name: node-traffic-httpsvr
        image: image-registry.openshift-image-registry.svc:5000/openshift/tools:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
        command: [ "python", "-m", "http.server","30001"]
        ports:
        - containerPort: 30001
          hostPort: 30003
          name: httpport
          protocol: TCP
        startupProbe:
          httpGet:
            path: /
            port: 30001
        readinessProbe:
          tcpSocket:
            port: 30001
          initialDelaySeconds: 15
        livenessProbe:
          tcpSocket:
            port: 30001
          initialDelaySeconds: 15               
        resources:
          limits:
            cpu: 250m
            memory: 100Mi
          requests:
            cpu: 1m
            memory: 10Mi
