workloads/mixed-scenario/customized-workloads/podready-detect-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podready-detect-nginx
  labels:
    app: podready-detect-nginx
spec:
  selector:
    matchLabels:
      app: podready-detect-nginx
  replicas: 10      
  template:
    metadata:
      labels:
        app: podready-detect-nginx     
    spec:
      containers:
      - name: nginx
        image: quay.io/openshift-psap-qe/nginx-alpine:multiarch
        securityContext:
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
          - name: http-port
            containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10                 
        volumeMounts:
          - name: wwwroot-vol
            mountPath: /var/www/
      volumes:
        - name: wwwroot-vol
          emptyDir: {}
