workloads/mixed-scenario/customized-workloads/perfapp-ingress-service.yml
kind: Service
apiVersion: v1
metadata:
  name: perfapp-ingress-traffic-service
spec:
  selector:
    trafficapp: perfapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
