workloads/mixed-scenario/customized-workloads/perfapp-nodeport-service.yml
kind: Service
apiVersion: v1
metadata:
  name: perfapp-nodeport-service
spec:
  selector:
    trafficapp: perfapp   
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
  sessionAffinity: None
