workloads/mixed-scenario/customized-workloads/perfweb-ingress-service.yml
kind: Service
apiVersion: v1
metadata:
  name: perfweb-ingress-traffic-service
spec:
  selector:
    trafficapp: perfweb
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
