workloads/mixed-scenario/customized-workloads/00_banp-default-deny-traffic.yml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default
spec:
  subject:
    namespaces:
      matchExpressions:
      - key: anplabel
        operator: In
        values: ["anp-restricted","anp-cidr","anp-pcidr","anp-node"]          
  ingress:
  - name: "deny-all-ingress-from-any-ns"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector: {}
  # - name: "deny-all-ingress-from-anp-open"
  #   action: "Deny"
  #   from:
  #   - pods:
  #       namespaceSelector:
  #         matchLabels:
  #           anplabel: anp-open
  #       podSelector:
  #         matchLabels:
  #           anplabel: anp-open             
  egress:
  - name: egress-deny-all-traffic-to-any-network
    action: Deny
    to:
    - networks:
      - 0.0.0.0/0
  - action: Deny
    name: egress-deny-all-traffic-to-any-node
    to:
    - nodes:
        matchExpressions:
        - key: kubernetes.io/hostname
          operator: Exists
  # - name: "deny-all-egress-to-anp-open"
  #   action: "Deny"
  #   to:
  #   - pods:
  #       namespaceSelector:
  #         matchLabels:
  #           anplabel: anp-open
  #       podSelector:
  #         matchLabels:
  #           anplabel: anp-open
