workloads/mixed-scenario/customized-workloads/01_anp-allow-common-service.yml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-monitoring
spec:
  priority: 1
  subject:
    namespaces: {}
  ingress:
  - name: "allow-ingress-from-monitoring"
    action: "Allow"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-monitoring
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-ingress
spec:
  priority: 2
  subject:
    namespaces: {}
  ingress:
  - name: "allow-ingress-from-ingress"
    action: "Allow"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-ingress
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-dns
spec:
  priority: 3
  subject:
    namespaces: {}
  egress:
  - name: "allow-egress-to-dns"
    action: "Allow"
    to:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-dns
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-kubeapi
spec:
  priority: 4
  subject:
    namespaces:
      namespaces: {}
  egress:
  - name: "allow-egress-to-kube-apiserver"
    action: "Allow"
    ports:
    - portNumber:
        port: 6443
        protocol: TCP
    - portNumber:
        port: 443
        protocol: TCP           
    to:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-kube-apiserver
