workloads/mixed-scenario/customized-workloads/10_anp-no-traffic-open-test-p31.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: no-traffic-open-test-p31
spec:
  priority: 31
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          anplabel: anp-open
      podSelector:
        matchLabels:
          anplabel: anp-open
  ingress:
  - name: "deny-all-ingress-from-anp-test"
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            anplabel: anp-test
        podSelector:
          matchLabels:
            anplabel: anp-test
  egress:
  - name: "deny-all-egress-to-anp-test"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            anplabel: anp-test
        podSelector:
          matchLabels:
            anplabel: anp-test
